Improve navigation and search overlay on small screens - Fixes #88

--- a/_sass/_forms.scss
+++ b/_sass/_forms.scss
@@ -230,88 +230,3 @@ select:focus {
 	float : left;
 	margin-left : 0;
 	margin-right : 3px; }
-
-// Jekyll Simple Search
-// -------------------------------------------------
-.dosearch {
-  padding: 6px 10px;
-  cursor: pointer;
-  display: block;
-  color: $white;
-  @include rounded(4px);
-  &:hover {
-	@include box-shadow($shadow: inset 0 0 1px $white);
-  	background-color: lighten($black, 10);
-  }
-}
-.search-form {
-	width: 100%;
-	position: relative;
-	opacity: 0;
-	transition: all 200ms 100ms cubic-bezier(0, 0.6, 0.4, 1);
-	top: 0;
-	left: -200px;
-	z-index: 9002;
-	.search-field {
-		-webkit-appearance: none;
-		border: none;
-		width: 100%;
-		color: $white;
-		border: none;
-		border-bottom: 1px solid lighten($white, 20);
-		background-color: transparent;
-		box-shadow: none;
-		border-radius: 0;
-		background-clip: padding-box;
-		@include font-size(32);
-		&:focus {
-			box-shadow: none;
-			outline: none;
-		}
-	}
-	&.active {
-		opacity: 1;
-		top: 0;
-		left: 0;
-	}
-	&.hidden {
-		display: none;
-	}
-	::-webkit-input-placeholder {
-		@include font-size(32);
-	}
-	.search-field::-webkit-search-decoration,
-	.search-field::-webkit-search-cancel-button,
-	.search-field::-webkit-search-results-button,
-	.search-field::-webkit-search-results-decoration {
-		display: none;
-	}
-	.post-list {
-		position: absolute;
-		width: 100%;
-		h4, li, p, a {
-			color: $white;
-		}
-		li {
-			border-bottom: 1px solid lighten($white,20);
-		}
-	}
-}
-body.search-overlay {
-	overflow: hidden;
-}
-body.search-overlay:after {
-	content: '';
-	background-color: lighten($black,5);
-	background-color: rgba($black,.95);
-	width: 100%;
-	min-height: 100%;
-	height: 100%;
-	position: absolute;
-	top: 0;
-	left: 0;
-	z-index: 9001;
-}
-.no-js .dosearch {
-	display: none;
-}
